fix blockquote alignment

--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -746,7 +746,8 @@ form.well {
 .bs-docs-example .hero-unit,
 .bs-docs-example .pagination,
 .bs-docs-example .navbar,
-.bs-docs-example .nav {
+.bs-docs-example .nav,
+.bs-docs-example blockquote {
   margin-bottom: 5px;
 }
 .bs-docs-example .pagination {
